// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag component Should be Large 1`] = `
<span
  className="tag is-large"
>
  Tag Large
</span>
`;

exports[`Tag component Should be group tags 1`] = `
<span
  className="tags has-addons"
>
  <span
    className="tag"
  >
    Tag 1
  </span>
  <span
    className="tag"
  >
    Tag 2
  </span>
</span>
`;

exports[`Tag component Should concat classname in props with Bulma classname 1`] = `
<span
  className="tag other-class this-is-a-test"
>
  Tag name
</span>
`;

exports[`Tag component Should exist 1`] = `[Function]`;

exports[`Tag component Should expose Tag Group 1`] = `[Function]`;

exports[`Tag component Should have tag classname 1`] = `
<span
  className="tag"
>
  Tag name
</span>
`;

exports[`Tag component Should use inline styles 1`] = `
<span
  className="tag"
  style={
    Object {
      "width": 250,
    }
  }
>
  Tag name
</span>
`;

exports[`Tag component Should use use color black 1`] = `
<span
  className="tag is-black"
>
  tag
  black
</span>
`;

exports[`Tag component Should use use color danger 1`] = `
<span
  className="tag is-danger"
>
  tag
  danger
</span>
`;

exports[`Tag component Should use use color dark 1`] = `
<span
  className="tag is-dark"
>
  tag
  dark
</span>
`;

exports[`Tag component Should use use color info 1`] = `
<span
  className="tag is-info"
>
  tag
  info
</span>
`;

exports[`Tag component Should use use color light 1`] = `
<span
  className="tag is-light"
>
  tag
  light
</span>
`;

exports[`Tag component Should use use color link 1`] = `
<span
  className="tag is-link"
>
  tag
  link
</span>
`;

exports[`Tag component Should use use color null 1`] = `
<span
  className="tag"
>
  tag
</span>
`;

exports[`Tag component Should use use color primary 1`] = `
<span
  className="tag is-primary"
>
  tag
  primary
</span>
`;

exports[`Tag component Should use use color success 1`] = `
<span
  className="tag is-success"
>
  tag
  success
</span>
`;

exports[`Tag component Should use use color warning 1`] = `
<span
  className="tag is-warning"
>
  tag
  warning
</span>
`;

exports[`Tag component Should use use color white 1`] = `
<span
  className="tag is-white"
>
  tag
  white
</span>
`;
